# phytree

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmark/: benchmark.py  benchmark_report.md
docs/: api.md  index.md
docs/tutorials/: annotate.md  build_tree.md  comparative.md
examples/: demo.py  ml_demo.py  pipeline_demo.py  showcase_circular.py  tracks_demo.py  tree_of_life_demo.py
examples/data/: SOURCES.md  fetch_example_data.py  tol_16S.fasta  tol_16S_aligned.fasta  tol_metadata.csv
phytree/: __init__.py
phytree/core/: io.py  tree.py
phytree/infer/: distance.py  ml.py  ml_native.py  pipeline.py  trim.py
phytree/plot/: backends.py  elements.py  figure.py
phytreon/: __init__.py
tests/: test_pipeline.py  test_smoke.py
validation/: validate.py  validation_report.md
